--- a/Mod2_Lab3_Answered.ipynb
+++ b/Mod2_Lab3_Answered.ipynb
@@ -841,10 +841,10 @@
       "cell_type": "markdown",
       "source": [
         "1. How do you think would the number of neighbors effect the Isomap algorithm? What happens when the number of neighbors considered is very large? What happens when it is very low?\n",
-        "<br><br><u>Answer</u>: As the no of neighbours (n_neighbors) increases, the space between the points are reduced. The \"Swing\" becomes get packed as the number increases.\n",
+        "<br><u>Answer</u>: As the no of neighbours (n_neighbors) increases, the space between the points are reduced. The \"Swing\" becomes get packed as the number increases.\n",
         "\n",
         "2. When is the ISOMAP algorithm superior to PCA?\n",
-        "<br><br><u>Answer</u>: Isomap performs better than PCA when trained on the MNIST dataset, showing a proper sectioning-off of different types of digits."
+        "<br><u>Answer</u>: Isomap performs better than PCA when trained on the MNIST dataset, showing a proper sectioning-off of different types of digits."
       ],
       "metadata": {
         "id": "ZsawscMpXl13"
