--- a/FMML_CLF1_Lab1_2022_Answered.ipynb
+++ b/FMML_CLF1_Lab1_2022_Answered.ipynb
@@ -158,7 +158,7 @@
         "\n",
         "# Write your code below and uncomment the lines below in order to run the cell.\n",
         "\n",
-        "# euclidean_dist = \n",
+        "# euclidean_dist = np.sqrt(np.sum((x_1-x_2)**2))\n",
         "# print(euclidean_dist)"
       ],
       "execution_count": null,
@@ -171,7 +171,6 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "cellView": "form",
         "outputId": "3d10c226-75df-4d6a-da4b-75aa2c9e2f68"
       },
       "source": [
@@ -376,7 +375,7 @@
         "\n",
         "# Write your code below and uncomment the lines below in order to run the cell.\n",
         "\n",
-        "# manhattan_dist = \n",
+        "# manhattan_dist = np.sum(np.abs((x_1 - x_2)))\n",
         "# print(manhattan_dist)"
       ],
       "execution_count": null,
@@ -389,7 +388,6 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "cellView": "form",
         "outputId": "856e4662-6edb-40ce-cb6e-cba3faf1597b"
       },
       "source": [
@@ -523,9 +521,10 @@
       "metadata": {
         "id": "tYJW9RRp5coB",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 217
         },
-        "outputId": "fa24262a-29ed-4b6e-a68f-99c06f1d7ef7"
+        "outputId": "2fe02780-4b37-4ffd-d62c-de36785bd5ea"
       },
       "source": [
         "# x_1 = np.array((1, 2))\n",
@@ -533,16 +532,17 @@
         "minkowski_distance = distance.minkowski(x_1, x_2, p=3)\n",
         "print(\"Minkowski distance when p=3 is \",minkowski_distance)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Minkowski distance when p=3 is  4.497941445275415\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-740bb5a0a39a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# x_1 = np.array((1, 2))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# x_2 = np.array((4, 6))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mminkowski_distance\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdistance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mminkowski\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Minkowski distance when p=3 is \"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mminkowski_distance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'distance' is not defined"
           ]
         }
       ]
@@ -550,11 +550,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S4Y7gKoW6ZOa",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3e612444-b8d7-490f-c509-e331be330a50"
+        "id": "S4Y7gKoW6ZOa"
       },
       "source": [
         "# You can verify that this distance is the same as Manhattan dist when p=1,\n",
@@ -566,19 +562,7 @@
         "print(\"Minkowski distance when p=2 is \",minkowski_dist_p2)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Minkowski distance when p=1 is  7.0\n",
-            "Minkowski distance when p=2 is  5.0\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
